@@ -21,6 +21,9 @@ Release 0.20.205.0 - unreleased
 
     HADOOP-7274. Fix typos in IOUtils. (Jonathan Eagles via cdouglas)
 
+    MAPREDUCE-2479. Move distributed cache cleanup to a background task,
+    backporting MAPREDUCE-1568. (Robert Joseph Evans via cdouglas)
+
 Release 0.20.204.0 - unreleased
 
   BUG FIXES
